feature(quarkus+vuejs): migrate to quarkus backend and vuejs fronted for native compilation (#144)
Co-authored-by: ramil-khamatyarov <ramil.hamatyarov@yandex.ru>